--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ header{
   color: #fff;
   padding-top: 28px;
   min-height: 75px;
-  border-bottom: #e8491d 5px solid;
+  border-bottom: #4c4eb8 5px solid;
 }
 
 header a {
@@ -53,7 +53,7 @@ header nav{
 }
 
 .highlight, header .current a{
-  color: #ee6f4c;
+  color: #4c4eb8;
   font-weight: bold; 
 }
 header a:hover{
@@ -75,7 +75,7 @@ header a:hover{
   margin-top: 100px;
   font-size: 45px;
   margin-bottom: 10px;
-  color: #e4a897;
+  color: #4c4eb8;
 }
 
 #showcase p{
@@ -109,7 +109,7 @@ form input[type="email"]{
   height: 28px;
   padding: 0px 18px 0px 18px;
   color: #fff;
-  background-color: #ee6f4c;
+  background-color: #4c4eb8;
   border: none;
   outline: none;
 }
@@ -133,7 +133,7 @@ footer{
   margin-top: 20px;
   padding: 20px;
   color: #fff;
-  background-color: #ee6f4c;
+  background-color: #4c4eb8;
   text-align: center;
 
 }
